syntax = "proto3";



package y_wcity;

option java_multiple_files = true;
option java_package = "io.grpc.wcity.login";
option java_outer_classname = "UserLoginProto";
option objc_class_prefix = "RPC";

service UserAuthentication{

    rpc CheckUser(UserRequest) returns (UserResponse);
    rpc Create(UserRequest) returns (UserResponse);
    

}

message UserRequest{
    string email = 1;
    string hashPassword = 2;
    string name = 3;

}

message UserResponse{
     bool IsUser = 1;
     string cookie = 2;
}