//Jose I. Retamal
//GMIT 2020

//Define interface for connect to auth database

syntax = "proto3";

package wcity;

option java_multiple_files = true;
option java_package = "io.grpc.wcity.login";
option java_outer_classname = "UserLoginProto";
option objc_class_prefix = "RPC";

// For acces user Database
//  The Service definition
service UserAuthDB {
    // add new user, response include id
    rpc AddUser (UserDBRequest) returns (UserDBResponse);
    // get user details, request should include only the email
    rpc GetUser (UserDBRequest) returns (UserDBResponse);
    //update a user.
    rpc UpdateUser (UserDBRequest) returns (UserDBResponse);
    //create seassion
    rpc CreateSeassion (UserSessionRequest) returns (UserSessionResponse);
    //get session
    rpc GetSeassion (UserSessionRequest) returns (UserSessionResponse);
    // delete session
    rpc DeleteSession (UserSessionRequest) returns (UserDeleteSessionResponse);
}
message UserDBRequest {
    string email = 1;
    bytes passwordHash = 2;
    bytes passwordSalt = 3;
}
message UserDBResponse {
    int64 id = 1;
    string email = 2;
    bytes passwordHash = 3;
    bytes passwordSalt = 4;
}
message UserSessionRequest {
    string email = 1;
    string token = 2;
}
message UserSessionResponse {
    string email = 1;
    string token = 2;
    string loginTime = 3;
    string lastSeenTime = 4;
}
message UserDeleteSessionResponse {
    bool success = 1;
    string email = 2;
}


