syntax = "proto3";


package wcity;

option java_multiple_files = true;
option java_package = "io.grpc.wcity.profilesDB";
option java_outer_classname = "ProfilesDBProto";
option objc_class_prefix = "RPC";

service ProfilesDB{
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
    rpc GetUser(GetUserRequest) returns (UserResponse);
    rpc CreateCity(City) returns (CityResponse);
    rpc CreatePlaceRequest(Place) returns (PlaceResponse);
    rpc GetCity(CityRequest) returns (CityResponse);
    rpc GetPlace(PlaceRequest) returns (PlaceResponse);
    rpc VisitCity(VisitCityRequest) returns (VisitCityResponse);
    rpc VisitPlace(VisitPlaceRequest) returns (VisitPlaceResponse);
    rpc GetVisitedCitys(VisitedCitysRequest) returns (VisitedCitysResponse);
    rpc GetVisitedPlaces(VisitedPlacesRequest) returns (VisitedPlacesResponse);
}
message CreateUserRequest{
     string email = 1;
     string name = 2;
     string description =3;
}
message CreateUserResponse{
    string email =1 ;
    string valied = 2;
}
message GetUserRequest{
    string email = 2;
}
message UserResponse{
     string email = 1;
     string name = 2;
     string description =3;
     repeated CityMin visitedCitys = 4;
     repeated PlaceMin visitedPlaces = 5;
}
message CityMin{
    string name = 1;
    string country = 2;
    string creatorEmail = 3;
}
message City{
    string name = 1;
    string country = 2;
    string creatorEmail = 3;
    Geolocation location = 4;
    string description = 5;
    repeated PlaceMin places = 6;
}
message CityRequest{
    string name = 1;
    string country = 2;
}
message CityResponse{
    string name = 1;
    string country = 2;
    bool valid = 3;
    City city = 4;
}
message Geolocation{
    float lon = 1;
    float lat = 2;
}
message PlaceMin{
    string name = 1;
    string cityID = 2;// composo of city name and city country
    string creatorEmail = 3;
}
message Place{
    string name = 1;
    string cityID = 2;// composo of city name and city country
    string creatorEmail = 3;
    Geolocation location = 4;
    string description = 5;
} 
message PlaceRequest{
    string name = 1;
    string cityID = 2;
}
message PlaceResponse{
    string name =1;
    string cityID =2;
    bool valid = 3;
    Place place =4;

}
message UpdatedUserRequest{
    string email = 1;
    string name = 2;
    string description = 3; 
}
message VisitedCitysRequest{
    string email = 1;
}

message VisitedCitysResponse{
    string email = 1;
    repeated City citys= 2;
}
message VisitCityRequest{
    string email = 1;
    string cityName = 2;
    string cityCountry =3;
}
message VisitCityResponse{
    string email = 1;
    string cityName = 2;
    string cityCountry =3;
    bool valid = 4;
}
message CityPlacesRequest{
    string cityName = 1;
    string cityCountry = 2;
}
message CityPlacesResponse{
    string cityName = 1;
    string cityCountry = 2;
    bool valid = 3;
    repeated Place places = 4;
}
message VisitPlaceRequest{
    string email = 1;
    string placeName =2;
    string placeCity =3;
}
message VisitPlaceResponse{
 string email = 1;
    string placeName =2;
    string placeCity =3;
    bool valid = 4;
}
message VisitedPlacesRequest{
    string email =1;
}
message VisitedPlacesResponse{
    string email = 1;
    repeated Place places =2;
}